refactor(server): 优化结构生成器与路径生成逻辑
- 移除冗余空值检查，简化代码流程
- 替换部分 if-else 为 switch 表达式提升可读性
- 提取重复逻辑为独立方法，增强代码复用性
- 优化桥接生成器中的偏移数组处理逻辑
- 统一区块状态获取逻辑，减少重复代码
- 清理无用变量声明与不必要的条件判断
- 修复部分潜在空指针引用风险
- 精简命令处理器中的蓝图类型判断逻辑
- 调整城市构建器中建筑最大坐标的初始化时机
- 更新混合类注解与访问权限以提高稳定性